src/test/ui/issues/issue-23543.stderr
error[E0229]: associated type bindings are not allowed here
  --> $DIR/issue-23543.rs:7:17
   |
LL |         where T<Bogus = Foo>: A;
   |                 ^^^^^^^^^^^ associated type not allowed here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0229`.
